[gd_scene load_steps=6 format=2]

[ext_resource path="res://MAIN/sprites/guns/gun333.png" type="Texture" id=1]
[ext_resource path="res://MAIN/Gun.gd" type="Script" id=2]
[ext_resource path="res://MAIN/GunShot.wav" type="AudioStream" id=3]
[ext_resource path="res://MAIN/ReloadButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://MAIN/AimLine.tscn" type="PackedScene" id=5]

[node name="Gun" type="Node2D"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.25252, 0.292803 )
texture = ExtResource( 1 )
region_rect = Rect2( 861.43, 941.743, 101, 269 )

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2( -27.254, -252.654 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="ReloadButton" parent="." instance=ExtResource( 4 )]

[node name="Sprite" parent="ReloadButton/Node2D" index="1"]
position = Vector2( 18.3361, -41.4499 )
scale = Vector2( 0.0847164, 0.108477 )
texture = ExtResource( 1 )

[node name="AimLine" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="ReloadButton/Node2D/reload" to="." method="_on_reload_pressed"]

[editable path="ReloadButton"]
